# skin-cancer-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt  wandb_config.py
.dvc/: config
.github/workflows/: run_tests.yml
conf/: logging.yml
conf/base/: catalog.yml  parameters_train_model.yml
conf/base/parameters/: csv_joining.yml  data_cleanup.yml  data_processing.yml  data_splitting.yml  feature_extraction.yml  image_augmentation.yml  image_labeling.yml  image_padding_resizing.yml  ml_pipeline.yml  model_training.yml
conf/test/: parameters_train_model.yml
data/01_raw/: dapi_csv.dvc  gfp_csv.dvc  mt_csv.dvc  r01c01.dvc  r01c02.dvc  r01c03.dvc  r01c04.dvc  r03c01.dvc  r03c02.dvc  r03c03.dvc  r03c04.dvc  r05c01.dvc  r05c02.dvc  r05c03.dvc  r05c04.dvc  shuttles.xlsx.dvc
data/02_intermediate/: combined_cell_data.csv.dvc  combined_cell_data.parquet.dvc  gfp_intensity_analysis.png.dvc  r01c01.dvc  r01c02.dvc  r01c03.dvc  r01c04.dvc  r03c01.dvc  r03c02.dvc  r03c03.dvc  r03c04.dvc  r05c01.dvc  r05c02.dvc  r05c03.dvc  r05c04.dvc
data/03_primary/: combined_cell_data_clean.parquet.dvc  combined_cell_data_incomplete.parquet.dvc  excluded_sample_roi_combinations.txt.dvc  padding_resizing_metadata.json.dvc  r01c01.dvc  r01c02.dvc  r01c03.dvc  r01c04.dvc  r03c01.dvc  r03c02.dvc  r03c03.dvc  r03c04.dvc  r05c01.dvc  r05c02.dvc  r05c03.dvc  r05c04.dvc
data/04_feature/: augmentation_config.json.dvc  augmentation_metadata.json.dvc  feature_data.parquet.dvc  r01c01.dvc  r01c02.dvc  r01c03.dvc  r01c04.dvc  r03c01.dvc  r03c02.dvc  r03c03.dvc  r03c04.dvc  r05c01.dvc  r05c02.dvc  r05c03.dvc  r05c04.dvc
data/05_model_input/: images.dvc  tabular.dvc
docs/source/: conf.py  index.rst
lightning_logs/version_7/: metrics.csv
lightning_logs/version_7/checkpoints/: epoch=0-step=8.ckpt
scripts/: dvc_add.py
src/skin_cancer_detection/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/skin_cancer_detection/XAI/: __init__.py  image_explainer.py  tabular_explainer.py  utils.py
src/skin_cancer_detection/api/: __init__.py  main.py
src/skin_cancer_detection/app/: __init__.py  main.py
src/skin_cancer_detection/models/: __init__.py  cross_validation.py  deployment.py  ensemble.py  evaluation.py  hyperparameter_tuning.py  image_models.py  model_trainer.py  tabular_models.py  utils.py  xai_explainer.py
src/skin_cancer_detection/nn_framework/: dataset.py  trainer_module.py
src/skin_cancer_detection/nn_framework/assemblies/: cnn_dense_assembly.py
src/skin_cancer_detection/nn_framework/model_components/classifier/: base_classifier.py
src/skin_cancer_detection/nn_framework/model_components/spatial_compressor/: conv_base_block.py  conv_block_no_skip.py  conv_block_skip.py
src/skin_cancer_detection/pipelines/csv_joining/: README.md  __init__.py  nodes.py  pipeline.py
src/skin_cancer_detection/pipelines/csv_label_fixing/: __init__.py  nodes.py  pipeline.py
src/skin_cancer_detection/pipelines/csv_to_parquet/: __init__.py  nodes.py  pipeline.py
src/skin_cancer_detection/pipelines/data_cleanup/: README.md  __init__.py  nodes.py  pipeline.py
src/skin_cancer_detection/pipelines/data_filtering/: __init__.py  nodes.py  pipeline.py
src/skin_cancer_detection/pipelines/data_restructuring/: nodes.py  pipeline.py
src/skin_cancer_detection/pipelines/data_splitting/: __init__.py  nodes.py  pipeline.py
src/skin_cancer_detection/pipelines/feature_extraction/: __init__.py  nodes.py  pipeline.py
src/skin_cancer_detection/pipelines/image_augmentation/: __init__.py  nodes.py  pipeline.py
src/skin_cancer_detection/pipelines/image_labeling/: __init__.py  nodes.py  pipeline.py
src/skin_cancer_detection/pipelines/image_padding_resizing/: __init__.py  nodes.py  pipeline.py
src/skin_cancer_detection/pipelines/ml_pipeline/: __init__.py  nodes.py  pipeline.py
src/skin_cancer_detection/pipelines/train_model/: __init__.py  nodes.py  pipeline.py
src/skin_cancer_detection/utils/: cleanup_invalid_data.py  convert_csv_to_parquet.py  csv_joiner.py  data_filtering.py  data_splitting.py  feature_extraction.py  fix_csv_labels.py  image_augmentation.py  image_labeling.py  model_trainer.py  padding_and_resizing.py  restructure.py
tests/: test_run.py
tests/pipelines/data_science/: test_pipeline.py
tests/pipelines/train_model/: test_pipeline.py
