[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11"
name = "skin_cancer_detection"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "ipython==8.37.0",
    "jupyterlab==4.4.3",
    "notebook==7.4.3",
    "kedro[jupyter]==0.19.14",
    "kedro-datasets[matplotlib-matplotlibwriter,pandas-csvdataset,pandas-exceldataset,pandas-parquetdataset,plotly-jsondataset,plotly-plotlydataset]==7.0.0",
    "kedro-viz==11.0.2",
    "scikit-learn==1.5.2",
    "seaborn==0.12.2",
    "aiobotocore==2.23.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiohttp-retry==2.9.1",
    "aioitertools==0.12.0",
    "aiosignal==1.3.2",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.9.0",
    "appdirs==1.4.4",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "asyncssh==2.21.0",
    "atpublic==6.0.1",
    "attrs==25.3.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.4",
    "billiard==4.2.1",
    "binaryornot==0.4.4",
    "bleach==6.2.0",
    "boto3==1.38.27",
    "botocore==1.38.27",
    "build==1.2.2.post1",
    "cachetools==6.1.0",
    "celery==5.5.3",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "click-default-group==1.2.4",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "comm==0.2.2",
    "configobj==5.0.9",
    "contourpy==1.3.2",
    "cookiecutter==2.6.0",
    "cryptography==45.0.4",
    "cycler==0.12.1",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dictdiffer==0.9.0",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dpath==2.2.0",
    "dulwich==0.22.8",
    "dvc==3.60.1",
    "dvc-data==3.16.10",
    "dvc-http==2.32.0",
    "dvc-objects==5.1.1",
    "dvc-render==1.0.2",
    "dvc-s3==3.2.2",
    "dvc-studio-client==0.21.0",
    "dvc-task==0.40.2",
    "dynaconf==3.2.11",
    "entrypoints==0.4",
    "et-xmlfile==2.0.0",
    "executing==2.2.0",
    "fastapi==0.115.13",
    "fastjsonschema==2.21.1",
    "filelock==3.18.0",
    "flatten-dict==0.4.2",
    "flufl-lock==8.2.0",
    "fonttools==4.58.4",
    "fqdn==1.5.1",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "funcy==2.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "grandalf==0.8",
    "graphql-core==3.2.6",
    "greenlet==3.2.3",
    "gto==1.7.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "hydra-core==1.3.2",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "ipykernel==6.29.5",
    "ipylab==1.0.0",
    "ipywidgets==8.1.7",
    "isoduration==20.11.0",
    "iterative-telemetry==0.0.10",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "joblib==1.5.1",
    "json5==0.12.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.16.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.15",
    "kedro-telemetry==0.6.3",
    "kiwisolver==1.4.8",
    "kombu==5.5.4",
    "lazy-loader==0.4",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.1.3",
    "more-itertools==10.7.0",
    "multidict==6.5.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "notebook-shim==0.2.4",
    "numpy==2.3.0",
    "omegaconf==2.3.0",
    "openpyxl==3.1.5",
    "orjson==3.10.18",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.3.0",
    "pandocfilters==1.5.1",
    "parse==1.20.2",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "plotly==5.24.1",
    "pluggy==1.6.0",
    "pre-commit-hooks==5.0.0",
    "prometheus-client==0.22.1",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==20.0.0",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydot==4.0.1",
    "pygit2==1.18.0",
    "pygments==2.19.1",
    "pygtrie==2.5.0",
    "pyparsing==3.2.3",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-json-logger==3.3.0",
    "python-slugify==8.0.4",
    "pytoolconfig==1.3.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==27.0.0",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==14.0.0",
    "rope==1.13.0",
    "rpds-py==0.25.1",
    "ruamel-yaml==0.18.14",
    "ruamel-yaml-clib==0.2.12",
    "s3fs==2025.5.1",
    "s3transfer==0.13.0",
    "scipy==1.15.3",
    "scmrepo==3.3.11",
    "secure==1.0.1",
    "semver==3.0.4",
    "send2trash==1.8.3",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "shortuuid==1.0.13",
    "shtab==1.7.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "sqltrie==0.11.2",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "strawberry-graphql==0.274.3",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "terminado==0.18.1",
    "text-unidecode==1.3",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "tomlkit==0.13.3",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.16.0",
    "types-python-dateutil==2.9.0.20250516",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "uvicorn==0.34.3",
    "uvloop==0.21.0",
    "vine==5.1.0",
    "voluptuous==0.15.2",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "widgetsnbextension==4.0.14",
    "wrapt==1.17.2",
    "yarl==1.20.1",
    "zc-lockfile==3.0.post1",
    "zipp==3.23.0",
]

[project.scripts]
"skin-cancer-detection" = "skin_cancer_detection.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "pytest-cov~=3.0",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.1.8"
]

[tool.setuptools.dynamic]
version = {attr = "skin_cancer_detection.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "skin_cancer_detection"
project_name = "Skin Cancer Detection"
kedro_init_version = "0.19.12"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "True"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/skin_cancer_detection -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long

[tool.kedro_telemetry]
project_id = "c082174ef8e44374a3a4849c3bce9958"
